found out target attribute to open link in new tab

--- a/beercollector/beercollector/main_app/templates/beercollection/index.html
+++ b/beercollector/beercollector/main_app/templates/beercollection/index.html
@@ -14,7 +14,7 @@
             {% else %}
                 <p>High Gravity: {{beer.abv}}% ABV</p>
             {% endif %}
-            <a href={{beer.url_site}}>{{beer.brewery}}</a>
+            <a href={{beer.url_site}} target="_blank">{{beer.brewery}}</a>
             </div>
         </div>
         {% endfor %}
