--- a/beercollector/beercollector/main_app/templates/base.html
+++ b/beercollector/beercollector/main_app/templates/base.html
@@ -17,11 +17,11 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;BeerCollector</a></li>
+          <li><a href="{% url 'home' %}" class="left brand-logo">&nbsp;&nbsp;BeerCollector</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
-          <li><a href="/allbeers">All Beers</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'index' %}">All Beers</a></li>
         </ul>
       </div>
     </nav>
