--- a/beercollector/beercollector/main_app/templates/beercollection/index.html
+++ b/beercollector/beercollector/main_app/templates/beercollection/index.html
@@ -5,17 +5,19 @@
 
         {% for beer in all_beers %}
         <div class="card">
-            <div class="card-content">
-            <span class="card-title">{{ beer.brewery }}</span>
-            <p>Name: {{ beer.name }}</p>
-            <p>Style: {{ beer.style }}</p>
-            {% if beer.abv < 8.0 %}
-                <p>ABV: {{ beer.abv }}%</p>
-            {% else %}
-                <p>High Gravity: {{beer.abv}}% ABV</p>
-            {% endif %}
-            <a href={{beer.url_site}} target="_blank">{{beer.brewery}}</a>
-            </div>
+            <a class="card-content" href="{% url 'details' beer.id %}"
+                <div class="card-content">
+                <span class="card-title">{{ beer.brewery }}</span>
+                <p>Name: {{ beer.name }}</p>
+                <p>Style: {{ beer.style }}</p>
+                {% if beer.abv < 8.0 %}
+                    <p>ABV: {{ beer.abv }}%</p>
+                {% else %}
+                    <p>High Gravity: {{beer.abv}}% ABV</p>
+                {% endif %}
+                <a href={{beer.url_site}} target="_blank">{{beer.brewery}}</a>
+                </div>
+            </a>
         </div>
         {% endfor %}
 
