--- a/beercollector/beercollector/main_app/templates/base.html
+++ b/beercollector/beercollector/main_app/templates/base.html
@@ -21,6 +21,7 @@
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'beer_create' %}">Add a Beer</a></li>
           <li><a href="{% url 'index' %}">All Beers</a></li>
         </ul>
       </div>
