--- a/beercollector/beercollector/main_app/templates/beercollection/details.html
+++ b/beercollector/beercollector/main_app/templates/beercollection/details.html
@@ -3,22 +3,98 @@
 
 <h1>Beer Details</h1>
 
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ beer.brewery }}</span>
-    <p>Beer: {{ beer.name }}</p>
-    <p>Style: {{ beer.style }}</p>
-    {% if beer.abv > 8 %}
-      <p>High Gravity: {{ beer.abv }}% ABV</p>
-    {% else %}
-      <p>ABV: {{ beer.abv }}%</p>
-    {% endif %}
-    <a href={{beer.url_site}} target="_blank">{{beer.brewery}}</a>
-  </div>
-  <div class="card-action">
-    <a href="{% url 'beer_update' beer.id %}">Edit</a>
-    <a href="{% url 'beer_delete' beer.id %}">Delete</a>
-  </div>
+<div class="row">
+    <div class="col s6"
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">{{ beer.brewery }}</span>
+                <p>Beer: {{ beer.name }}</p>
+                <p>Style: {{ beer.style }}</p>
+                {% if beer.abv > 8 %}
+                <p>High Gravity: {{ beer.abv }}% ABV</p>
+                {% else %}
+                <p>ABV: {{ beer.abv }}%</p>
+                {% endif %}
+                <a href={{beer.url_site}} target="_blank">{{beer.brewery}}</a>
+            </div>
+            <div class="card-action">
+                <a href="{% url 'beer_update' beer.id %}">Edit</a>
+                <a href="{% url 'beer_delete' beer.id %}">Delete</a>
+            </div>
+        </div>
+    </div>
+    <div class=“col s6”>
+        <form method="post" action="{% url 'add_beersampling' beer.id %}">
+            {% csrf_token %}
+            {{ beersampling_form.as_p }}
+            <input type="submit" class="btn" value="Add Beer Sampling">
+        </form>
+        <table class=“striped”>
+        <thead>
+            <tr><th>Date</th><th>Day of Week</th></tr>
+        </thead>
+        <tbody>
+            {% for beersampling in beer.beersampling_set.all %}
+            <tr>
+                <td>{{beersampling.date}}</td>
+                <td>{{beersampling.get_weekday_display}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+        </table>
+    </div>
 </div>
+<hr>
+<div class="row">
+  <div class="col s6">
+    <h3>{{ beer.name }}'s Hops</h3>
+    {% if beer.hops.count %}
+      {% for hop in beer.hops.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+                {{ hop.name }}
+            </span>
+          </div>
+          
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>No Hops Updated :(</h5>
+    {% endif %}
+  </div>
+  <div class="col s6">
+    <h3>Available Hops</h3>
+    {% if hops.count %}
+      {% for hop in hops.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+             {{ hop.name }}
+            </span>
+          </div>
 
+          <div class="card-action">
+            <form action="{% url 'assoc_hop' beer.id hop.id %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn">Add</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>{{beer.name}} Already Has All Hops Available</h5>
+    {% endif %}
+  </div>
+<script>
+    const dateEl = document.getElementById('id_date');
+    M.Datepicker.init(dateEl, {
+        format: 'yyyy-mm-dd',
+        defaultDate: new Date(),
+        setDefaultDate: true,
+        autoClose: true
+    });
+    const selectEl = document.getElementById('id_weekday');
+        M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
