--- a/beercollector/beercollector/main_app/templates/beercollection/details.html
+++ b/beercollector/beercollector/main_app/templates/beercollection/details.html
@@ -15,8 +15,9 @@
                 {% else %}
                 <p>ABV: {{ beer.abv }}%</p>
                 {% endif %}
-                <a href={{beer.url_site}} target="_blank">{{beer.brewery}}</a>
+                <a href={{beer.url_site}} target="_blank">Visit {{beer.brewery}} Brewing Company</a>
             </div>
+        </br>
             <div class="card-action">
                 <a href="{% url 'beer_update' beer.id %}">Edit</a>
                 <a href="{% url 'beer_delete' beer.id %}">Delete</a>
@@ -44,7 +45,22 @@
         </table>
     </div>
 </div>
-<hr>
+
+    </div>
+    <!-- Insert photo markup below this comment -->
+    {% for photo in beer.photo_set.all %}
+      <img class="responsive-img card-panel" src="{{photo.url}}">
+    {% empty %}
+      <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+    {% endfor %}
+
+    <form action="{% url 'add_photo' beer.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+        {% csrf_token %}
+        <input type="file" name="photo-file">
+        <br><br>
+        <input type="submit" class="btn" value="Upload Photo">
+    </form>
+
 <div class="row">
   <div class="col s6">
     <h3>{{ beer.name }}'s Hops</h3>
