--- a/beercollector/beercollector/main_app/templates/beercollection/details.html
+++ b/beercollector/beercollector/main_app/templates/beercollection/details.html
@@ -32,7 +32,7 @@
         </form>
         <table class=“striped”>
         <thead>
-            <tr><th>Date</th><th>Day of Week</th></tr>
+            <tr><th>Date: </th><th>Sampled: </th></tr>
         </thead>
         <tbody>
             {% for beersampling in beer.beersampling_set.all %}
