--- a/beercollector/beercollector/main_app/templates/base.html
+++ b/beercollector/beercollector/main_app/templates/base.html
@@ -27,6 +27,7 @@
             <li><a href="{% url 'index' %}">All Beers</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
           {% else %}
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
             <li><a href="{% url 'login' %}">Log IN</a></li>
           {% endif %}
         </ul>
