--- a/beercollector/beercollector/main_app/templates/base.html
+++ b/beercollector/beercollector/main_app/templates/base.html
@@ -23,6 +23,7 @@
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
           {% if user.is_authenticated %}
+            <li><a href="{% url 'mybeers' %}">My Beers</a></li>
             <li><a href="{% url 'beer_create' %}">Add a Beer</a></li>
             <li><a href="{% url 'index' %}">All Beers</a></li>
             <li><a href="{% url 'logout' %}">Log Out</a></li>
